<resources>
    <string name="app_name">Practicals</string>

    <!--Main Activity-->
    <string name="taskA_button">Android(A): UI Widgets</string>
    <string name="taskB_button">Android(B): UI Layouts</string>
    <string name="taskC_button">Android(C): RecyclerView and Adapters</string>
    <string name="btn_chapter_five">Chapter 5 : Android architecture</string>
    <string name="taskE_button">Android(E): Other important views</string>
    <string name="chapter_four">Chapter 4: Web Services</string>

    <!--Android(A) ui_layout-->
    <string name="layout_title"> Enter feedback details to send to the developer :</string>
    <string name="name_hint"> Your Name</string>
    <string name="email_hint"> Your Email</string>
    <string name="feedback_hint"> Feedback Details...</string>
    <string name="feedback_checkbox"> Would you like an email response?</string>
    <string name="feedback_button"> Send Feedback</string>
    <string name="linear_button"> Linear Layout</string>
    <string name="constraint_button"> Constraint Layout</string>
    <string name="frame_button"> Frame Layout</string>
    <string name="table_button"> Table Layout</string>
    <string name="relative_button"> Relative Layout</string>

    <!--Android(B) ui_widget-->
    <string name="registration_title">REGISTRATION</string>
    <string name="user_name"> Enter Name</string>
    <string name="user_password"> Enter password</string>
    <string name="gender_text"> Gender :</string>
    <string name="gender_male"> Male</string>
    <string name="gender_female"> Female</string>
    <string name="language_text"> Languages :</string>
    <string name="hindi_checkbox"> Hindi</string>
    <string name="english_checkbox"> English</string>
    <string name="gujarati_checkbox"> Gujarati</string>
    <string name="switch_text"> Save</string>
    <string name="submit_button"> Submit</string>
    <string name="toast_button"> Toast</string>
    <string name="custom_toast_button"> Custom Toast</string>
    <string name="toast_message"> This is a simple toast message</string>
    <string name="email_pattern"> [a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+ </string>
    <string name="required_text"> required</string>
    <string name="password_short_text"> password is too short</string>
    <string name="submit_toast"> Details submitted</string>
    <string name="invalid_email"> Enter valid email</string>

    <!--Android(C) Recycler and Adapters-->

    <!-- Task Buttons -->
    <string name="list_view_task">List View</string>
    <string name="recycler_view_task">Recycler View</string>
    <string name="grid_item_decoration_task">GridLayout + ItemDecoration</string>
    <string name="view_pager_task">View Pager</string>
    <string name="view_pager_bottom_navigation_task">View Pager + BottomNavigation</string>

    <!--Home Fragment -->
    <string name="home_fragment">Home</string>

    <!-- My Favorites Fragment -->
    <string name="my_favorites_fragment">My Favorites</string>

    <!-- My Profile Fragment -->
    <string name="profile_fragment_title">Expandable ListView</string>

    <!-- Recent Fragment -->
    <string name="recent_fragment">Recent</string>

    <!-- Search Fragment -->
    <string name="search_fragment_title">Expandable RecyclerView</string>

    <!-- List View -->
    <string name="list_view_toast">Item id %1$d</string>

    <!-- Menu -->
    <string name="home_menu_item">Home</string>
    <string name="search_menu_item">Search</string>
    <string name="my_profile_menu_item">My profile</string>
    <string name="permission">Permission</string>
    <string name="btn_select_pdf">Select PDF</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_data">data</string>
    <string name="txt_setting">setting</string>
    <string name="txt_package">package</string>
    <string name="txt_alert_message">Allow permission for further operations</string>
    <string name="txt_denied">denied</string>

    <!-- ViewPager -->
    <string-array name="page_names">
        <item>Recent</item>
        <item>Favorite</item>
    </string-array>

    <!-- DetailClass Data-->
    <string-array name="title_names">
        <item>Domino\'s</item>
        <item>Papa John\'s Pizza</item>
        <item>Little Caesars</item>
        <item>La Pino\'Z</item>
    </string-array>

    <string-array name="sub_title_names">
        <item>Dil, Dosti, Domino\'s</item>
        <item>Better Ingredients. Better Pizza</item>
        <item>Pizza! Pizza!</item>
        <item>The Giant Pizza Slice</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--activity_fragment-->
    <string name="container_task"> FragmentContainer + bottomNavigation</string>
    <string name="jetpack_task"> JetPack + bottomNavigation</string>
    <string name="data_edittext"> Enter the data</string>
    <string name="send_btn_text"> Send</string>
    <string name="gallery_btn_text"> Capture Photo</string>
    <string name="default_receive_text"> Send Your Message</string>

    <!--Web Services-->
    <string name="add_user_tv">Add User</string>
    <string name="name_et">Enter Name</string>
    <string name="job_et">Enter Job</string>
    <string name="add_btn">Add</string>
    <string name="id_tv">id</string>
    <string name="first_name_tv">First name</string>
    <string name="last_name_tv">Last name</string>
    <string name="email_tv">Email</string>
    <string name="email_et">Enter Email</string>
    <string name="login_btn">Login</string>
    <string name="cancel_alert_btn">CANCEL</string>
    <string name="proceed_alert_btn">PROCEED</string>
    <string name="alert_title">User Details</string>
    <string name="successful_toast">Successful</string>
    <string name="unsuccessful_toast">Unsuccessful</string>
    <string name="empty_response">Empty response</string>
    <string name="androidD_task">Android(D) Activity,Intent and Fragment</string>
    <string name="alert_text">name: %1$s \njob: %2$s \nid: %3$s \ncreatedAt: %4$s</string>

    <!-- Menu -->
    <string name="gallery_menu_item">Gallery</string>
    <string name="add_message_menu_item">Add Message</string>
    <string name="view_message_menu_item">View Message</string>
    <string name="intent_type">image/*</string>

    <!-- Views -->
    <string name="search_view_hint">search</string>
    <string name="horizontal_scroll_title">Horizontal Scroll View</string>
    <string name="vertical_scroll_title">Vertical Scroll View</string>
    <string name="scroll_view_task">Scroll View</string>
    <string name="web_view_task">Web View</string>
    <string name="nested_scroll_view_task">Nested scroll view</string>
    <string name="animate_task">Animate</string>
    <string name="nested_text">NestedScrollView is just like ScrollView, but it supports acting as both a nested scrolling parent and child on both new and old versions of Android. It is enabled by default. NestedScrollView is used when there is a need for a scrolling view inside another scrolling view.</string>
    <string name="email">Enter email</string>
    <string name="title_login">Login</string>
    <string name="submit">Submit</string>
    <string name="user_details">Student Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="student_name">Enter Name</string>
    <string name="student_rollNo">Enter RollNo</string>
    <string name="btn_mvvm">Mvvm</string>
    <string name="btn_mvc">mvc</string>
    <string name="btn_mvp">mvp</string>

    <!-- Architecture -->
    <string name="txt_student_alert">name: %1$s \nroll No: %2$s</string>
    <string name="txt_custom_message">Custom String: %1$s</string>
    <string name="chapter_six">Chapter 6: Android Permission Model</string>
    <string name="enter_password">Enter password</string>
    <string name="username">Enter username</string>
    <string name="password">Enter Password</string>
</resources>