<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_widget.RegistrationForm">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/usernameTextInput"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:layout_below="@id/registrationTextView"
        android:paddingBottom="10sp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background_ui_widget"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextInput"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_background_ui_widget"
            android:hint="@string/password"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/passwordTextInput" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/genderTextView"
        android:layout_below="@id/passwordTextInput">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gender_male" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/gender_female"/>

    </RadioGroup>

    <TextView
        android:id="@+id/languagesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/genderTextView"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/hindiCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderTextView"
        android:layout_toEndOf="@id/languagesCheckBox"
        android:text="@string/hindi_checkbox" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/englishCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_checkbox"
        android:layout_below="@id/genderTextView"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/hindiCheckBox" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/detailsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languagesCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/switch_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsSwitch"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rippleeffect"
        android:text="@string/submit_button"
        android:textColor="@color/white"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/toastTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/detailsSwitch"
        android:background="@drawable/rippleeffect"
        android:layout_toEndOf="@id/submitButton"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/showDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>
</ScrollView>