<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".views.ViewTasksActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchViewTask"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/nested_scroll_view_task"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scrollViewTask"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/scroll_view_task"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchViewTask" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/webViewTask"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/web_view_task"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewTask" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/animateTask"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/animate_task"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webViewTask" />

</androidx.constraintlayout.widget.ConstraintLayout>