<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiWidget"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/taskA_button"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/uiLayouts"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/uiLayouts"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uiLayouts"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_below="@id/uiWidget"
        android:background="@drawable/buttonripple"
        android:text="@string/taskB_button"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiWidget" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recyclerViewAdapters"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_below="@id/uiWidget"
        android:background="@drawable/buttonripple"
        android:text="@string/taskC_button"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uiLayouts" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activityFragment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonripple"
        android:text="@string/androidD_task"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewAdapters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>