<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".architecture.ArchitectureTasksActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMvp"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonripple"
        android:text="@string/btn_mvp"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/btnMvc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMvc"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonripple"
        android:text="@string/btn_mvc"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMvp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMvvm"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonripple"
        android:text="@string/btn_mvvm"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMvc" />

</androidx.constraintlayout.widget.ConstraintLayout>